fix: few fixes